fixed line-height for .module-title on mobile

--- a/assets/A01/css/_modules.scss
+++ b/assets/A01/css/_modules.scss
@@ -5,7 +5,7 @@
 
 .module-overlay { padding: 4.375rem 0; }
 
-.module-title { text-align: center; }
+.module-title { line-height: 1.2em; text-align: center; }
 .module-subtitle { text-align: center; font-style: italic; }
 
 .cta-button { 
